--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
@@ -20,7 +20,7 @@
 </div>
 <div id="files">
 </div>
-<div class="pre-footer"></div>
+<div class="pre-footer"><span id="switch-view-btn">switch</span></div>
 <footer><span class="copyright-text">Copyright &copy; 2017 Alex Staples. All Rights Reserved.</span></footer>
 </body>
 </html>
