--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
         <input class="inputfile" type="file" name="file" id="file" required />
         <input type="submit" class="inputfile" id="file_upload">
         <label for="file" class="btn">Choose File</label>
-        <label for="file_upload" class="btn" id="add-file"><img src="ic_backup_white_24px.svg" id="cloud-icon"></label>
+        <label for="file_upload" class="btn" id="add-file"><img src="images/ic_backup_white_24px.svg" id="cloud-icon"></label>
     </form>
 </div>
 <div id="files">
 </div>
-<div class="pre-footer"><span id="switch-view-btn">switch</span></div>
+<div id="toolbar-container">
+    <div id="toolbar">
+        <img src="images/lines.png" id="switch-view-btn">
+    </div>
+</div>
+<div class="pre-footer"></div>
 <footer><span class="copyright-text">Copyright &copy; 2017 Alex Staples. All Rights Reserved.</span></footer>
 </body>
 </html>
