progress on login - fix later

--- a/uploader.html
+++ b/uploader.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uploaded Files</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="view.js"></script>
-    <link rel="stylesheet" href="uploaded_files.css">
+    <script src="public/view.js"></script>
+    <link rel="stylesheet" href="public/uploaded_files.css">
 </head>
 <body>
 <header><h2>Choose a file. Upload it. All uploads appear below.</h2></header>
@@ -15,14 +15,14 @@
         <input class="inputfile" type="file" name="file" id="file" required />
         <input type="submit" class="inputfile" id="file_upload">
         <label for="file" class="btn">Choose File</label>
-        <label for="file_upload" class="btn" id="add-file"><img src="images/ic_backup_white_24px.svg" id="cloud-icon"></label>
+        <label for="file_upload" class="btn" id="add-file"><img src="public/images/ic_backup_white_24px.svg" id="cloud-icon"></label>
     </form>
 </div>
 <div id="files">
 </div>
 <div id="toolbar-container">
     <div id="toolbar">
-        <img src="images/lines.png" id="switch-view-btn">
+        <img src="public/images/lines.png" id="switch-view-btn">
     </div>
 </div>
 <div class="pre-footer"></div>
